# lucky_draw

./: .gitignore  README.md  app.py  pyproject.toml
static/css/: admin.css  game.css
static/js/: admin.js  game.js
templates/: admin.html  game.html
